--- a/frontend/frontend/public/index.html
+++ b/frontend/frontend/public/index.html
@@ -41,7 +41,7 @@
   <script src="../assets/js/light-bootstrap-dashboard.js?v=2.0.0 " type="text/javascript"></script>
   <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
   <script src="../assets/js/demo.js"></script>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
       $(document).ready(function() {
           // Javascript method's body can be found in assets/js/demos.js
           demo.initDashboardPageCharts();
@@ -49,7 +49,14 @@
           demo.showNotification();
   
       });
-  </script>
+  </script> -->
+  <script type="text/javascript">
+    $(document).ready(function() {
+        if ($("#chartContainer").length) { // Periksa jika elemen ada
+            demo.initDashboardPageCharts(); // Panggil fungsi hanya jika elemen tersedia
+        }
+    });
+</script>
 </body>
 
 </html>
