--- a/frontend/frontend/public/index.html
+++ b/frontend/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+  <link rel="icon" sizes="500x500" href="../assets/img/Dian_tas.png">
   <!-- <link rel="icon" type="image/png" href="../assets/img/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Sistem Inventaris Dian Tas</title>
