--- a/frontend/frontend/public/index.html
+++ b/frontend/frontend/public/index.html
@@ -35,6 +35,7 @@
   <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
   <!--  Chartist Plugin  -->
   <script src="../assets/js/plugins/chartist.min.js"></script>
+  <!-- <script src="chartist/dist/chartist.min.css"></script> -->
   <!--  Notifications Plugin    -->
   <!-- <script src="../assets/js/plugins/bootstrap-notify.js"></script> -->
   <!-- Control Center for Light Bootstrap Dashboard: scripts for the example pages etc -->
