--- a/frontend/frontend/public/index.html
+++ b/frontend/frontend/public/index.html
@@ -3,19 +3,19 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" sizes="500x500" href="../assets/img/Dian_tas.png">
-  <!-- <link rel="icon" type="image/png" href="../assets/img/favicon.ico"> -->
+  <link rel="icon" sizes="500x500" href="/assets/img/Dian_tas.png">
+  <!-- <link rel="icon" type="image/png" href="/assets/img/favicon.ico"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title>Sistem Inventaris Dian Tas</title>
+  <title>Dian Tas</title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
   <!-- CSS Files -->
-  <link href="../assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../assets/css/light-bootstrap-dashboard.css?v=2.0.0 " rel="stylesheet" />
+  <link href="/assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/assets/css/light-bootstrap-dashboard.css?v=2.0.0 " rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
-  <!-- <link href="../assets/css/demo.css" rel="stylesheet" /> -->
+  <!-- <link href="/assets/css/demo.css" rel="stylesheet" /> -->
 </head>
 
 <body>
@@ -26,22 +26,22 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <!-- Github buttons -->
-  <script src="../assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/popper.min.js" type="text/javascript"></script>
-  <script src="../assets/js/core/bootstrap.min.js" type="text/javascript"></script>
+  <script src="/assets/js/core/jquery.3.2.1.min.js" type="text/javascript"></script>
+  <script src="/assets/js/core/popper.min.js" type="text/javascript"></script>
+  <script src="/assets/js/core/bootstrap.min.js" type="text/javascript"></script>
   <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-  <script src="../assets/js/plugins/bootstrap-switch.js"></script>
+  <script src="/assets/js/plugins/bootstrap-switch.js"></script>
   <!--  Google Maps Plugin    -->
   <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script> -->
   <!--  Chartist Plugin  -->
-  <script src="../assets/js/plugins/chartist.min.js"></script>
+  <script src="/assets/js/plugins/chartist.min.js"></script>
   <!-- <script src="chartist/dist/chartist.min.css"></script> -->
   <!--  Notifications Plugin    -->
-  <!-- <script src="../assets/js/plugins/bootstrap-notify.js"></script> -->
+  <!-- <script src="/assets/js/plugins/bootstrap-notify.js"></script> -->
   <!-- Control Center for Light Bootstrap Dashboard: scripts for the example pages etc -->
-  <script src="../assets/js/light-bootstrap-dashboard.js?v=2.0.0 " type="text/javascript"></script>
+  <script src="/assets/js/light-bootstrap-dashboard.js?v=2.0.0 " type="text/javascript"></script>
   <!-- Light Bootstrap Dashboard DEMO methods, don't include it in your project! -->
-  <script src="../assets/js/demo.js"></script>
+  <script src="/assets/js/demo.js"></script>
   <!-- <script type="text/javascript">
       $(document).ready(function() {
           // Javascript method's body can be found in assets/js/demos.js
